styles/main.css
body {
    background-color: #444444;
    font-family: Arial, Helvetica, sans-serif;
}

#content-box {
    margin: 2.125em auto;
    margin-left: 2.125em;
    margin-right: 2.125em;
    border: 0.3125em solid #777777;
    background-color: #444444;
    padding-bottom: 2em;
}

h1 {
    font-family: Georgia, serif;
    font-style: italic;
    font-size: 2em;
    color: white;
    text-align: center;
    font-weight: normal;
    padding: 0.8em;
}

.p-bold {
    color: white;
    font-weight: bold;
    text-align: center;
    margin-top: -1em;
}

#vertical-bar {
    font-weight: bold;
    color: #777777;
}

a {
    font-weight: bold;
    color: #64c998;
}

hr {
    border: none;
    border-top: 0.06em solid #777777;
    margin: 2em auto;
    margin-right: 3em;
    margin-left: 3em;
}

h2 {
    margin-left: 2em;
    color: white;
    font-size: 1.5em;
}

.wendys-personal-pic {
    float: right;
    margin-left: 1.25em;
    width: 14.5em;
    margin-right: 3em;
    border: 2px solid #777777;
    padding: 4px;
    display: block;
}

.content {
    color: white;
    margin-left: 3em;
    font-family: Georgia, 'Times New Roman', Times, serif;
    margin-right: 3em;
}

.p-footer {
    text-align: center;
}

h3 {
    color: #b5b5b5;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 0.9em;
    margin-left: 3em;
    padding-top: 1.3em;
}

ul {
    list-style-type: square;
    color: white;
    margin-left: 2em;
    line-height: 1.5em;
}

.job-title {
    font-weight: bold;
}

.period {
    color: #b5b5b5;
    font-size: 0.85em;
}

.job-description {
    color: #b5b5b5;
    font-family: Georgia, 'Times New Roman', Times, serif;
    margin-right: 3em;
    font-size: 0.95em;
}

